# DecisionAlgorithm

./: .gitignore  DecisionAlgorithm.sln  README.md
DecisionAlgorithm/: DecisionAlgorithm.vcxproj  DecisionAlgorithm.vcxproj.filters  main.cpp
DecisionAlgorithm/src/: CMakeLists.txt  DecisionAlgorithm.cpp  DecisionAlgorithm.h
DecisionAlgorithm/src/Common/: Const.h  DecisionSettings.h  MusicData.cpp  MusicData.h
DecisionAlgorithm/src/Modules/: CountingModule.cpp  CountingModule.h  GenerationModule.cpp  GenerationModule.h  TierModule.cpp  TierModule.h  VotingModule.cpp  VotingModule.h
DecisionAlgorithm/tests/: TestMain.cpp  TestMain.h
DecisionAlgorithm/tests/Modules/: CountingModuleTests.cpp  CountingModuleTests.h  GenerationModuleTests.cpp  GenerationModuleTests.h  TierModuleTests.cpp  TierModuleTests.h  VotingModuleTests.cpp  VotingModuleTests.h
